--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "@exponent/ex-navigation": "^2.1.5",
     "babel-preset-react-native-stage-0": "^1.0.1",
     "react": "15.4.1",
-    "react-native": "0.39.0"
+    "react-native": "0.39.0",
+    "react-redux": "^4.4.6",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-jest": "17.0.2",
     "babel-preset-react-native": "1.9.0",
     "jest": "17.0.3",
-    "react-test-renderer": "15.4.1"
+    "react-test-renderer": "15.4.1",
+    "redux-logger": "^2.7.4",
+    "remote-redux-devtools": "^0.5.5"
   },
   "jest": {
     "preset": "react-native"
